--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.product{
+  background-color: aqua;
+  margin: 5px;
+  border-radius: 3px;
+  padding: 5px;
+}
