--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,11 @@
   border-radius: 3px;
   padding: 5px;
 }
+
+.user{
+  background-color: aquamarine;
+  margin: 10px;
+  padding: 5px;
+  border: 3px solid rgb(3, 7, 243);
+  border-radius: 15px;
+}
